add style and jpg

--- a/strona-glwona/src/main/resources/static/index.html
+++ b/strona-glwona/src/main/resources/static/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Strona główna</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Spring MVC</h1>
+    <header>
+        <img src="code.jpg" alt="kod programu">
+        <h1>Spring MVC</h1>
+    </header>
 </body>
 </html>
