--- a/strona-glwona/src/main/resources/static/index.html
+++ b/strona-glwona/src/main/resources/static/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Strona główna</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
     <header>
-        <img src="code.jpg" alt="kod programu">
+        <img src="images/code.jpg" alt="kod programu">
         <h1>Spring MVC</h1>
     </header>
 </body>
