add directories and configuration

--- a/strona-glowna/src/main/resources/static/index.html
+++ b/strona-glowna/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Strona główna</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="../../../../../strona-glowna/src/main/resources/static/stylesheets/style.css">
 </head>
 <body>
     <header>
